@@ -25,16 +25,14 @@ int setupDMA2();
  * Timer1 ISR
  * This routine is installed with the interrupt Attach function
  * There will be no signal number attached when invoked
- * @param signum: not used
  */
-void __attribute__((interrupt)) timer1_trace_isr(int signum);
+void __attribute__((interrupt)) timer1_trace_isr();
 
 /**
  * This routine is installed with the interrupt Attach function
  * There will be no signal number attached when invoked
- * @param signum: not used
  */
-void __attribute__((interrupt)) wand_trace_isr(int signum);
+void __attribute__((interrupt)) wand_trace_isr();
 
 
 /**
@@ -189,12 +187,9 @@ int setupDMA2()
  * Timer1 ISR
  * This routine is installed with the interrupt Attach function
  * There will be no signal number attached when invoked
- * @param signum: not used
  */
-void __attribute__((interrupt)) timer1_trace_isr(int signum)
+void __attribute__((interrupt)) timer1_trace_isr()
 {
-   (void)signum;
-
 	e_ctimer_set(E_CTIMER_1, E_CTIMER_MAX);
 	e_ctimer_start(E_CTIMER_1, E_CTIMER_CLK);
 	return;
@@ -203,11 +198,9 @@ void __attribute__((interrupt)) timer1_trace_isr(int signum)
 /**
  * This routine is installed with the interrupt Attach function
  * There will be no signal number attached when invoked
- * @param signum: not used
  */
-void __attribute__((interrupt)) wand_trace_isr(int signum)
+void __attribute__((interrupt)) wand_trace_isr()
 {
-	(void)signum;
 	return;
 }
 
